# MoneyTogether

./: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml
Assets/: .qmlls.ini  CMakeLists.txt  Style.qml
Assets/Style/: Style.qml  StyleDark.qml  StyleLight.qml
Components/: CMakeLists.txt
Pages/: HomePage.qml
modules/Auth/: CMakeLists.txt  token-storage.cpp  token-storage.h
modules/Core/: CMakeLists.txt  logger.h  servicelocator.cpp  servicelocator.h  settings-manager.cpp  settings-manager.h
modules/Data/: CMakeLists.txt  data-mapper.cpp  data-mapper.h  remote-api-client.cpp  remote-api-client.h  transaction-repository.h  wallet-repository.cpp  wallet-repository.h
modules/Models/: CMakeLists.txt  goal-model.cpp  goal-model.h  transaction-model.cpp  transaction-model.h  user-model.cpp  user-model.h  wallet-model.cpp  wallet-model.h
modules/Sync/: CMakeLists.txt  change-tracker.cpp  change-tracker.h  conflict-resolver.cpp  conflict-resolver.h  network-monitor.cpp  network-monitor.h
modules/UI/Assets/: CMakeLists.txt
modules/UI/Assets/Style/: Style.qml  StyleBase.qml  StyleDark.qml  StyleLight.qml
modules/UI/Components/: MButton.qml
modules/UI/Pages/: HomePage.qml
qml/: CMakeLists.txt
qml/Assets/: CMakeLists.txt  Strings.qml
qml/Assets/Style/: Style.qml  StyleBase.qml  StyleDark.qml  StyleLight.qml
qml/Components/: CMakeLists.txt  MButton.qml  MSlideButton.qml  MTextButton.qml  MTransactionButton.qml
qml/Pages/: CMakeLists.txt  HomePage.qml
src/: CMakeLists.txt  Main.qml  main.cpp
src/common/: CMakeLists.txt  enums.h
src/controllers/: CMakeLists.txt  transaction-controller.cpp  transaction-controller.h
src/models/: CMakeLists.txt
src/models/domain/: CMakeLists.txt  transaction.cpp  transaction.h
src/models/qtmodels/: CMakeLists.txt  transaction-list-model.cpp  transaction-list-model.h
src/persistence/: CMakeLists.txt  transaction-repository.cpp
src/services/: CMakeLists.txt  transaction-service.cpp  transaction-service.h
